[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/models/drone/wyh_drone_ply.glb" type="PackedScene" id=1]
[ext_resource path="res://source/drone/drone.gd" type="Script" id=2]

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true
albedo_color = Color( 1, 0.560784, 0.560784, 1 )

[sub_resource type="CylinderMesh" id=6]
material = SubResource( 5 )
top_radius = 0.3
bottom_radius = 0.3
height = 0.001

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Propeller1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Propeller2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Propeller3:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Propeller4:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "spin_propellers"
tracks/0/type = "value"
tracks/0/path = NodePath("Propeller1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 180, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Propeller2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 180, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Propeller3:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 180, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Propeller4:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 180, 0 ) ]
}

[node name="drone" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="wyh_drone" parent="." index="0"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -0.07 )

[node name="Propeller1" type="Spatial" parent="." index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.85, 0, 0.28 )

[node name="MeshInstance3" type="MeshInstance" parent="Propeller1" index="0"]
mesh = SubResource( 6 )

[node name="Propeller2" type="Spatial" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.85, 0, 0.28 )

[node name="MeshInstance3" type="MeshInstance" parent="Propeller2" index="0"]
mesh = SubResource( 6 )

[node name="Propeller3" type="Spatial" parent="." index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.85, 0, -0.32 )

[node name="MeshInstance3" type="MeshInstance" parent="Propeller3" index="0"]
mesh = SubResource( 6 )

[node name="Propeller4" type="Spatial" parent="." index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.85, 0, -0.32 )

[node name="MeshInstance3" type="MeshInstance" parent="Propeller4" index="0"]
mesh = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]
playback_speed = 20.0
anims/RESET = SubResource( 4 )
anims/spin_propellers = SubResource( 3 )

[node name="lookat" type="Spatial" parent="." index="6"]
